--- a/.github/workflows/merge_features.yml
+++ b/.github/workflows/merge_features.yml
@@ -11,15 +11,15 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v3
         with:
           python-version: '3.10'
 
       - name: Install dependencies
-        run: |
-          pip install pandas pyarrow
+        run: pip install pandas pyarrow
 
       - name: Merge bookDepth Parquets
         run: python merge_bookDepth_features.py
@@ -31,4 +31,3 @@ jobs:
           message: 'chore: merge bookDepth feature Parquets per symbol'
           author_name: ghactions
           author_email: actions@github.com
-          pull: true
