--- a/.github/workflows/feature_update.yml
+++ b/.github/workflows/feature_update.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install Dependencies
+      - name: Install dependencies
         run: pip install pandas scikit-learn pyarrow parquet-tools
 
       - name: Update bookDepth features
@@ -29,16 +29,13 @@ jobs:
       - name: Smoke-Test bookDepth
         run: |
           for FILE in features/bookDepth/*/*.parquet; do
-            # Schema-Check via inspect
             parquet-tools inspect "$FILE" \
               | grep -q "notional_imbalance_roll_7d" \
               || (echo "Missing notional_imbalance_roll_7d in $FILE" && exit 1)
             parquet-tools inspect "$FILE" \
-              | grep -q "kyle_lambda" \
-              || (echo "Missing kyle_lambda in $FILE" && exit 1)
-            # Header-Check via csv
-            parquet-tools csv "$FILE" \
-              | head -n1 \
               | grep -q "has_notional_imbalance_roll_7d" \
               || (echo "Missing has_notional_imbalance_roll_7d in $FILE" && exit 1)
+            parquet-tools inspect "$FILE" \
+              | grep -q "kyle_lambda" \
+              || (echo "Missing kyle_lambda in $FILE" && exit 1)
           done
