--- a/.github/workflows/feature_update.yml
+++ b/.github/workflows/feature_update.yml
@@ -21,20 +21,22 @@ jobs:
           python-version: '3.10'
 
       - name: Install dependencies
-        run: pip install pandas scikit-learn pyarrow parquet-tools
+        run: |
+          pip install pandas scikit-learn pyarrow parquet-tools
 
       - name: Update bookDepth features
-        run: python update_bookDepth_features.py
+        run: |
+          python update_bookDepth_features.py
 
       - name: List updated columns for merged files
         run: |
           for F in features/bookDepth/*/*_to_*.parquet; do
             echo "---- $F ----"
             python - <<EOF
-import pandas as pd
-df = pd.read_parquet("$F")
-print(df.columns.tolist())
-EOF
+            import pandas as pd
+            df = pd.read_parquet("$F")
+            print(df.columns.tolist())
+            EOF
           done
 
       - name: Smoke-Test bookDepth
