--- a/.github/workflows/bookdepth.yml
+++ b/.github/workflows/bookdepth.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           python daily_bookdepth_pipeline.py
 
-      - name: Sanity: List updated columns
+      - name: Sanity List updated columns
         run: |
           for F in features/bookDepth/*/*.parquet; do
             echo "---- $F ----"
