--- a/.github/workflows/bookdepth.yml
+++ b/.github/workflows/bookdepth.yml
@@ -1,60 +1,40 @@
-# .github/workflows/bookdepth-incremental.yml
-name: 🛠️ Daily BookDepth Incremental + Rolling Features
+name: 🛠️ BookDepth Daily Incremental
 
 on:
   schedule:
-    - cron: '0 7 * * *'
-  workflow_dispatch: {}
+    # Täglich um 02:00 UTC
+    - cron: '0 2 * * *'
+  workflow_dispatch:
 
 jobs:
   bookdepth-incremental:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          persist-credentials: true
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.12'
+          python-version: '3.10'
 
       - name: Install dependencies
         run: |
           pip install --upgrade pandas numpy scipy scikit-learn pyarrow parquet-tools
 
-      - name: Run daily pipeline
-        run: |
-          python daily_bookdepth_pipeline.py
+      - name: Run BookDepth pipeline
+        run: python daily_bookdepth_pipeline.py
 
-      - name: Sanity List updated columns
+      - name: Commit & Push feature-Files
         run: |
-          for F in features/bookDepth/*/*.parquet; do
-            echo "---- $F ----"
-            python3 -c "import pandas as pd; df = pd.read_parquet('$F'); print(df.tail(3))"
-          done
-
-      - name: Smoke-Test bookDepth
-        run: |
-          for FILE in features/bookDepth/*/*.parquet; do
-            parquet-tools inspect "$FILE" \
-              | grep -q "notional_imbalance_roll_7d" \
-              || (echo "Missing notional_imbalance_roll_7d in $FILE" && exit 1)
-            parquet-tools inspect "$FILE" \
-              | grep -q "has_notional_imbalance_roll_7d" \
-              || (echo "Missing has_notional_imbalance_roll_7d in $FILE" && exit 1)
-            parquet-tools inspect "$FILE" \
-              | grep -q "kyle_lambda_roll_30d" \
-              || (echo "Missing kyle_lambda_roll_30d in $FILE" && exit 1)
-          done
-
-      - name: Commit & Push Parquets
-        uses: EndBug/add-and-commit@v9
-        with:
-          add: 'features/bookDepth/**/*.parquet'
-          message: '♻️ BookDepth daily incremental + rolling features'
-          author_name: ghactions
-          author_email: actions@github.com
+          git config user.name  "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add features/bookDepth/
+          if ! git diff --cached --quiet; then
+            git commit -m "♻️ BookDepth daily incremental + rolling features"
+            git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:main
+          else
+            echo "✔️ Keine Änderungen"
+          fi
